# MLI

./: .gitattributes  .lfsconfig  Assigner.py  Augmentor.py  BLClassifier.py  CCDCEntryHelpers.py  CombineDatabases.py  CreatePeakList.py  EntryHelpers.py  Evaluations.py  GenerateDataset.py  GenerateDataset_mpi.py  IOManagers.py  Indexing.py  LICENSE.txt  MITemplates.py  MLIMethods.tex  MPIHelpers.py  Methods.md  Networks.py  Optimizer.py  Optimizer_mpi.py  ParseCOD.py  ParseCSD.py  ParseDatabases.py  PhysicsInformedModel.py  README.md  RandomGenerator.py  Regression.py  Reindexing.py  RemoveDuplicates.py  TargetFunctions.py  Utilities.py  UtilitiesOptimizer.py  convert_ccdc_mpi.py  numba_functions.py  pyproject.toml  run_optimization_convergence_radius.py  run_optimization_experimental.py  run_optimization_nobl.py  (+2 more)
data/: DownloadRRUFF.ipynb  GroupSpec.xlsx  GroupSpec_cubic.xlsx  GroupSpec_hexagonal.xlsx  GroupSpec_monoclinic.xlsx  GroupSpec_orthorhombic.xlsx  GroupSpec_rhombohedral.xlsx  GroupSpec_tetragonal.xlsx  GroupSpec_triclinic.xlsx  SetupHKLRef_LatticeSystem.ipynb  SpacegroupGroups.xlsx  bad_identifiers_0.txt  bad_identifiers_1.txt  bad_identifiers_2.txt  download_cod.sh  hkl_ref_cF.npy  hkl_ref_cI.npy  hkl_ref_cP.npy  hkl_ref_hexagonal.npy  hkl_ref_mC.npy  hkl_ref_monoclinic.npy  hkl_ref_oC.npy  hkl_ref_oF.npy  hkl_ref_oI.npy  hkl_ref_orthorhombic.npy  hkl_ref_rhombohedral.npy  hkl_ref_tI.npy  hkl_ref_tetragonal.npy
data/RRUFF/: ProcessRRUFF.ipynb  RRUFFEntry.py
data/experimental_data/: 2F_peak_list.json  2napth_peak_list.json  3F_peak_list.json  4F_peak_list.json  c12_peak_list.json  c6_peak_list.json  c9_peak_list.json  salicylate_peak_list.json  thiorene_peak_list.json
mlindex/command_line/: run.py
mlindex/dataset_generation/: CombineDatabases.py  EntryHelpers.py  GenerateDataset.py  ParseCOD.py  ParseCSD.py  ParseDatabases.py  RemoveDuplicates.py
mlindex/model_training/: Augmentor.py  Evaluations.py  IntegralFilter.py  MITemplates.py  Networks.py  RandomForest.py  RandomGenerator.py  Wrapper.py
mlindex/optimization/: CandidateOptLoss.py  CandidateValidation.py  Optimizer.py  UtilitiesOptimizer.py
scripts/: mlindex.run
(+752 files in other folders)
