[project]
name = "mlindex"
version = "0.0"
authors = [{name = "David Mittan-Moreau", email = "dwmoreau@lbl.gov"}]
description = "A data driven approach to powder diffraction indexing"
keywords = ["powder diffraction", "diffraction", "crystallography", "indexing", "machine learning"]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

#dependencies = [
#    "numpy",
#    "scipy",
#    "pandas",
#    "mpi4py",
#    "scikit-learn",
#    "gemmi",
#    "numba",
#    "onnxruntime",
#    "matplotlib",
#    "tqdm",
#]
#[project.optional-dependencies]
#dataset_generation = ["pyarrow", "openpyxl", "cctbx"]
#training = ["pyarrow", "openpyxl", "skl2onnx", "keras", "torch", "torchvision"]

[project.urls]
Homepage = "https://github.com/dwmoreau/MLI"
Issues = "https://github.com/dwmoreau/MLI/issues"